5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_1805.log
== TEST (2019-03-28 10:42:25) 
-- CODE:
Cx1 = float(input("insira as coordenada de x1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy1 = float(input("insira os valores de y1: "))
Cy2 = float(input("insira os valores de y2: "))

CxM = (x1 + x2)/2
Cym = (y1 + y2)/2

print(round(xm,1))
print(round(ym,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    CxM = (x1 + x2)/2
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:42:34) 
-- CODE:
Cx1 = float(input("insira as coordenada de x1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy1 = float(input("insira os valores de y1: "))
Cy2 = float(input("insira os valores de y2: "))

CxM = (x1 + x2)/2
Cym = (y1 + y2)/2

print(round(xm,1))
print(round(ym,1))

-- EXECUTION TIME:
0.174181
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1805/main.py", line 6, in <module>
    CxM = (x1 + x2)/2
NameError: name 'x1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:43:17) 
-- CODE:
Cx1 = float(input("insira os valores de x1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy1 = float(input("insira os valores de y1: "))
Cy2 = float(input("insira os valores de y2: "))

CxM = (Cx1 + Cx2)/2
Cym = (Cy1 + Cy2)/2

print(round(Cxm,1))
print(round(Cym,1))

-- EXECUTION TIME:
0.134736
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1805/main.py", line 9, in <module>
    print(round(Cxm,1))
NameError: name 'Cxm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:43:19) 
-- CODE:
Cx1 = float(input("insira os valores de x1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy1 = float(input("insira os valores de y1: "))
Cy2 = float(input("insira os valores de y2: "))

CxM = (Cx1 + Cx2)/2
Cym = (Cy1 + Cy2)/2

print(round(Cxm,1))
print(round(Cym,1))

-- EXECUTION TIME:
0.162017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1805/main.py", line 9, in <module>
    print(round(Cxm,1))
NameError: name 'Cxm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:43:20) 
-- CODE:
Cx1 = float(input("insira os valores de x1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy1 = float(input("insira os valores de y1: "))
Cy2 = float(input("insira os valores de y2: "))

CxM = (Cx1 + Cx2)/2
Cym = (Cy1 + Cy2)/2

print(round(Cxm,1))
print(round(Cym,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(Cxm,1))
NameError: name 'Cxm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:44:02) 
-- CODE:
Cx1 = float(input("insira os valores de x1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy1 = float(input("insira os valores de y1: "))
Cy2 = float(input("insira os valores de y2: "))

Cxm = (Cx1 + Cx2)/2
Cym = (Cy1 + Cy2)/2

print(round(Cxm,1))
print(round(Cym,1))

-- EXECUTION TIME:
0.12559
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.5
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.8
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.8
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:44:06) 
-- CODE:
Cx1 = float(input("insira os valores de x1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy1 = float(input("insira os valores de y1: "))
Cy2 = float(input("insira os valores de y2: "))

Cxm = (Cx1 + Cx2)/2
Cym = (Cy1 + Cy2)/2

print(round(Cxm,1))
print(round(Cym,1))

-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:45:52) 
-- CODE:
Cx1 = float(input("insira os valores de x1: "))
Cy1 = float(input("insira os valores de y1: "))
Cx2 = float(input("insira os valores de x2: "))
Cy2 = float(input("insira os valores de y2: "))

Cxm = (Cx1 + Cx2)/2
Cym = (Cy1 + Cy2)/2

print(round(Cxm,1))
print(round(Cym,1))

-- EXECUTION TIME:
0.150071
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
